--- a/shop/templates/shop/checkout.html
+++ b/shop/templates/shop/checkout.html
@@ -10,7 +10,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>rhis is our checkout page</h2>
+    <h2>This is our checkout page</h2>
     <div class="contanier">
       <div class="col-md-12">
         <div class="row">
